# grtp-kerr

./: README.md  experiment_1_writeup.txt  file_descriptions.txt  pyproject.toml  report_outline.tex  run_all.sh  run_and_package.sh  ship.sh
data/: exp1_efficiency.h5  exp2_basin_a0.50_E2.0_xpoint.h5  exp2_basin_a0.50_scaled_xpoint.h5  exp2_basin_a0.90.h5  exp2_basin_a0.90_E0.0_B0.0_xpoint.h5  exp2_basin_a0.90_E0.0_xpoint.h5  exp2_basin_a0.90_E2.0_harris.h5  exp2_basin_a0.90_scaled_harris.h5  exp2_basin_a0.90_scaled_xpoint.h5  exp2_basin_a0.99_E2.0_xpoint.h5  exp2_basin_a0.99_scaled_xpoint.h5
experiments/: exp1_efficiency_sweep.py  exp2_basin_map.py  plot_rescued_exp2.py
grtp/: __init__.py
grtp/analysis/: __init__.py  energy.py  topology.py
grtp/fields/: __init__.py  potentials.py  xpoint.py
grtp/integrator/: __init__.py  equations.py  solver.py
grtp/spacetime/: __init__.py  ergosphere.py  kerr.py
grtp/viz/: __init__.py  basin_map.py  trajectory.py
tests/: conftest.py  test_energy.py  test_geodesic.py  test_kerr.py
