[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grtp-kerr"
version = "0.1.0"
description = "General Relativistic Test-Particle tracking in the Kerr ergosphere"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@institution.edu" }]
keywords = [
    "general relativity",
    "Kerr black hole",
    "magnetic reconnection",
    "test particle",
    "ergosphere",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "matplotlib>=3.7",
    "h5py>=3.9",
    "tqdm>=4.65",
]

[project.optional-dependencies]
# Enables @numba.njit JIT compilation of the ODE RHS hot loop.
# Activate with:  USE_NUMBA=1 python ...
fast = ["numba>=0.57"]

# Interactive 3D trajectory rendering (PyVista HTML figures for supplementary).
viz3d = ["pyvista>=0.42"]

# Development: symbolic Christoffel derivation + testing.
dev = [
    "sympy>=1.12",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ipykernel>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["grtp"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
